OUT page with mechanic and new database schema

--- a/templates/users/users.html
+++ b/templates/users/users.html
@@ -288,7 +288,7 @@
             <table class="table table-dark table-hover align-middle">
                 <thead class="table-danger text-dark">
                     <tr>
-                        <th>Date</th>
+                        <th>Date & Time</th>
                         <th>Receipt #</th>
                         <th>Customer</th>
                         <th>Payment</th>
